# MappingEvolve

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  requirements.txt
evolve_single/: main.py  mcts.py  node.py  openevolve_config.yaml  proactive_single_point_evolve.py  prompts.py  prompts_optimized.py  query_llm.py
mapping/: CMakeLists.txt  emap.cpp  emap.hpp  evolve.cpp  evolve.tpp  main.cpp  mapping.hpp  match_phase.tpp  match_phase_exact.tpp
openevolve/ccode/: append_hpp_code.py  mapping.hpp  mapping_all.hpp
openevolve/examples/function_minimization/: config.yaml
openevolve/examples/mapping/: evaluator.py  initial_program.cpp
openevolve/mapping/: README.md  config.yaml  evaluator.py  match_drop_phase.cpp  match_phase.cpp  match_phase_exact.cpp
output/openevolve_match_drop_phase4/best/: best_program_info.json
output/openevolve_match_phase4/best/: best_program_info.json
output/openevolve_match_phase_exact4/best/: best_program_info.json
output/proactive_evolve_openevolve_deepseek-v3-241226_20251116_014457/: log.txt  summary.json
output/proactive_evolve_openevolve_deepseek-v3-241226_20251116_014457/iter_1/: metadata.txt  openevolve_config.yaml  plan.json  planner_input.txt  planner_output.txt  reward.json
output/proactive_evolve_openevolve_gpt-5-2025-08-07_20251116_134740/: log.txt  summary.json
output/proactive_evolve_openevolve_gpt-5-2025-08-07_20251116_134740/iter_2/: plan.json  (+3 more)
output/proactive_evolve_openevolve_qwen3-max_20251116_093335/: log.txt  summary.json
scripts/: aggregate_evolution_results.py  plot_rewards.py
(+1828 files in other folders)
